--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 						<!-- Start Choose Rights -->
 						<div class="choose-right">
 							<div class="image gallery">
-								<img src="img/Engineer.JPG" class="Zoom-effect" alt="Zoom Image">
+								<img src="img/Engineer.JPG">
 							</div>
 						</div>
 						<!-- End Choose Rights -->
